--- a/data/site_template/player-desktop.css
+++ b/data/site_template/player-desktop.css
@@ -149,3 +149,29 @@ body {
   text-align: right;
   margin-top: 5px;
 }
+
+.search-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;;
+  border-style: none none solid none;
+  border-width: 2px 5px;
+  border-color: rgb(61, 74, 116);
+  font-size: 20px;
+  padding: 20px 5px 5px 10px;
+  margin: 0;
+}
+
+.search-box .fas {
+  color: rgb(61, 74, 116);
+}
+
+.search-box input {
+  padding-left: 10px;
+  width: 100%;
+  height: 25px;
+  font-size: 20px;
+  border: none;
+  background-color: unset;
+}
