--- a/data/site_template/player-mobile.css
+++ b/data/site_template/player-mobile.css
@@ -10,6 +10,10 @@ body {
   min-height: 100vh;
 }
 
+#app {
+  width: 100%;
+}
+
 .jumbotron {
   background-size: cover;
   background-position: center;
