--- a/data/site_template/player-mobile.css
+++ b/data/site_template/player-mobile.css
@@ -188,3 +188,20 @@ body {
   border: none;
   background-color: unset;
 }
+
+.info-card {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  padding: 10px;
+  font-size: 23px;
+  color: rgb(61, 74, 116);
+  border-style: solid;
+  border-radius: 5px;;
+  border-width: 3px;
+  border-color: rgb(61, 74, 116);
+}
+
+.info-card .fas {
+  font-size: 150%;
+}
