--- a/data/site_template/player-mobile.css
+++ b/data/site_template/player-mobile.css
@@ -113,8 +113,14 @@ body {
   align-items: center;
 }
 
+.player-list {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: center;
+}
+
 .player-list-item {
-  margin: 30px 10px;
+  margin: 15px 10px;
 }
 
 .footer {
@@ -173,7 +179,7 @@ body {
   border-color: rgb(61, 74, 116);
   font-size: 20px;
   padding: 20px 5px 5px 10px;
-  margin: 0;
+  margin: 0px 0px 10px 0px;
 }
 
 .search-box .fas {
