再生/一時停止アイコンをFontAwesomeのものにした

--- a/data/site_template/player-desktop.css
+++ b/data/site_template/player-desktop.css
@@ -48,6 +48,8 @@ body {
   height: 45px;
   border: none;
   background-color: rgb(61, 74, 116);
+  color: white;
+  font-size: 20px;
 }
 .btn-real:active {
   transform: translateX(1px) translateY(1px);
