--- a/data/site_template/player-mobile.css
+++ b/data/site_template/player-mobile.css
@@ -54,6 +54,8 @@ body {
   height: 40px;
   border: none;
   background-color: rgb(61, 74, 116);
+  color: white;
+  font-size: 16px;
 }
 .btn-real:active {
   transform: translateX(1px) translateY(1px);
